Update to 1.21.11-rc3